Image path corrected

--- a/Kalman_Filter.ipynb
+++ b/Kalman_Filter.ipynb
@@ -73,7 +73,7 @@
     "\\end{cases}\n",
     "\\end{equation}$$\n",
     "\n",
-    "![state-space_model](images/schematics.png)\n",
+    "![state-space_model](Images/schematics.png)\n",
     "\n",
     "The matrix form of this system therefore becomes:\n",
     "\n",
