Local Navigation with Wall Following Attempt

--- a/Local Navigation with Wall Following Attempt.ipynb
+++ b/Local Navigation with Wall Following Attempt.ipynb
@@ -319,7 +319,7 @@
     "\n",
     "- **Output**\n",
     "\n",
-    "    - Motion control command for robot translation and rotation\n",
+    "    - Command for controlling the robot's translational and rotational motion\n",
     "\n",
     "\n",
     "- **Challenges**\n",
