Update Local Navigation with Wall Following Attempt.ipynb

--- a/Local Navigation with Wall Following Attempt.ipynb
+++ b/Local Navigation with Wall Following Attempt.ipynb
@@ -324,8 +324,8 @@
     "\n",
     "- **Challenges**\n",
     "\n",
-    "    - Determining the colour of our physical obstacles have to be white, to not have the camera capture the obstacle in global vision.\n",
-    "    - Determining the shape of our obstacles have to be cylindrical for an optimal maneuver around it.\n",
+    "    - The colour of our physical obstacles have to be white, to not have the camera capture the obstacle in global vision.\n",
+    "    - The shape of our obstacles have to be cylindrical for an optimal maneuver around it.\n",
     "    - Determining the fixed distance to move forward and theta (angle) for Thymio's rotation was challenging to set without prior knowledge of the obstacle's shape. If the distance was too short or the angle too small, the robot will run into the obstacle. This tok us multiple tries to reach the optimal `distance_forward` and `theta`, as it was challenging to determine when an obstacle is considered cleared. Thus we had to finetune our parameters multiple times to ensure the success of our Thymio's obstacle avoidance. \n",
     "    - Determining the obstacle threshold for when Thymio should initiate the local avoidance, `obstThrh`."
    ]
@@ -378,7 +378,7 @@
    "source": [
     "async def local_avoidance(sensor_prox, theta, dist):\n",
     "    \"\"\"\n",
-    "    1a. Obstacle detected right in front: Rotate only\n",
+    "    1a. Obstacle detected right in front: rotate left + go forward\n",
     "    1b. Obstacle detected near sides: rotate + go forward\n",
     "    2. Determine rotation left or right\n",
     "    3. Wall following of the obstacle\n",
@@ -392,7 +392,7 @@
     "    \n",
     "    # Object detected right in front\n",
     "    if sensor_prox[2] > obstThrh: \n",
-    "        # Rotate only (to the left)\n",
+    "        # Rotate to the left + go forward\n",
     "        await turn(pi/4)  \n",
     "        theta += pi/4\n",
     "        print(\"Front obstacle, turning right\")\n",
