--- a/FINAL MOBILE/Final_main_YTD.ipynb
+++ b/FINAL MOBILE/Final_main_YTD.ipynb
@@ -1638,7 +1638,7 @@
     "        calculate_global_path = await la_function(sensor_prox)\n",
     "        \n",
     "    await node.wait_for_variables()\n",
-    "    sensor_gr = node[\"prox.horizontal\"]\n",
+    "    sensor_gr = node[\"prox.ground.reflected\"]\n",
     "    await client.sleep(0.2)\n",
     "    while sum(sensor_gr[i] < GROUND_THRESHOLD for i in range(0, 2)): \n",
     "        calculate_global_path += 1\n",
